# fullstack-rust

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  router.rs
backend/src/routes/: custom_headers.rs  ext_json.rs  ext_path.rs  ext_text.rs  get_json.rs  hello_world.rs  middleware_msg.rs  mod.rs  query_params.rs
database/: Cargo.toml
database/src/: lib.rs  main.rs
database/src/routes/: hello_world.rs  mod.rs
