[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
hyper = { version = "0.14.24", features = ["full"] }
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
